Set tooltip on south east to avoid out of screen tooltip. Adjust font size and reduce (again) alpha

--- a/media/css/pydici.css
+++ b/media/css/pydici.css
@@ -272,7 +272,8 @@ a.tagrlink { color: #999999 }
   font-size: 1em;
 }
 .jqplot-highlighter-tooltip, .jqplot-canvasOverlay-tooltip {
-    background: none repeat scroll 0 0 rgba(208, 208, 208, 0.8);
+    background: none repeat scroll 0 0 rgba(208, 208, 208, 0.9);
+    font-size: 1em;
 }
 
 /**********/
